# pytest-chive

./: LICENSE  README.rst  environment.yml  pyproject.toml  pytest.ini  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
docs/: conf.py  index.rst
src/chive/: __init__.py  io.py  lazy.py  mpl.py  nodes.py  plugin.py  utils.py
src/pytest_chive/: __init__.py  hooks.py  io.py  lazy.py  mpl.py  nodes.py  test_chive.py
src/pytest_chive/test/: test_saver.py
tests/: test_chive.py
