[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-chive"
description = "Computational graph workflow + Unit Testing for Scientific Python"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Benjamin Walker", email = "raphael@hackebrot.de" },
]
maintainers = [
    { name = "Benjamin Walker", email = "raphael@hackebrot.de" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=8",
]
[project.urls]
Repository = "https://github.com/bwalker1/pytest-chive"
[project.entry-points.pytest11]
chive = "pytest_chive.plugin"
